--- a/css/general.css
+++ b/css/general.css
@@ -25,154 +25,163 @@ Default: 1
 1.05
 Paragraph default: 1.6
 */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html{
-    /* font-size: 10px;
+html {
+  /* font-size: 10px;
     10px / 16px = 0.625 * 100 = 62.5 
     1rem = 10px*/
-    font-size: 62.5%;
+  font-size: 62.5%;
+  overflow-x: hidden;
 }
-body{
-    font-family: 'Rubik', sans-serif;
-    line-height: 1;
-    font-weight: 400;
-    color: #555;
+body {
+  font-family: "Rubik", sans-serif;
+  line-height: 1;
+  font-weight: 400;
+  color: #555;
+  overflow-x: hidden;
 }
 /* ********************* */
 /* GENERAL REUSABLE COMPONENTS */
 /* ********************* */
-.container{
-    max-width: 120rem;
-    margin: 0 auto;
-    padding: 0 3.2rem;
+.container {
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
 }
-.grid{
-    display: grid;
-    row-gap: 9.6rem;
-    column-gap: 6.4rem;
+.grid {
+  display: grid;
+  row-gap: 9.6rem;
+  column-gap: 6.4rem;
 }
-.grid--center-v{
-    align-items: center;
+.grid--center-v {
+  align-items: center;
 }
-.grid--2-cols{
-    grid-template-columns: repeat(2, 1fr );
+.grid-item-center {
+  justify-self: center;
+  align-self: center;
+  text-align: center;
+  grid-column: 1/-1;
+  width: 50%;
 }
-.grid--3-cols{
-    grid-template-columns: repeat(3, 1fr );
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
 }
-.grid--4-cols{
-    grid-template-columns: repeat(4, 1fr );
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
 }
 .heading-primary,
 .heading-secondary,
-.heading-tertiary{
-    font-weight: 700;
-    letter-spacing: -0.5px;
-    color: #333;
+.heading-tertiary {
+  font-weight: 700;
+  letter-spacing: -0.5px;
+  color: #333;
 }
-.heading-primary{
-    /*  / 52 / 62 / 74 / */
-    font-size: 4.4rem;
-    /* / 32 / 48 / */
-    margin-bottom: 3.2rem;
-    line-height: 1.05;
+.heading-primary {
+  /*  / 52 / 62 / 74 / */
+  font-size: 4.4rem;
+  /* / 32 / 48 / */
+  margin-bottom: 3.2rem;
+  line-height: 1.05;
 }
-.heading-secondary{
-    /* / 30 / 36 / 44 / 52 / */
-    font-size: 3.6rem;
-    line-height: 1.02;
-    margin-bottom: 9.6rem;
-    font-weight: 500;
+.heading-secondary {
+  /* / 30 / 36 / 44 / 52 / */
+  font-size: 3.6rem;
+  line-height: 1.02;
+  margin-bottom: 9.6rem;
+  font-weight: 500;
 }
-.heading-tertiary{
-    /* / 30 / 36 / 44 / 52 / */
-    font-size: 3rem;
-    line-height: 1.2;
-    margin-bottom: 4.8rem;
-    font-weight: 500;
+.heading-tertiary {
+  /* / 30 / 36 / 44 / 52 / */
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 4.8rem;
+  font-weight: 500;
 }
-.heading-quaternary{
-    font-size: 2.4rem;
-    line-height: 1.1;
-    margin-bottom: 2.4rem;
-    font-weight: 500;
+.heading-quaternary {
+  font-size: 2.4rem;
+  line-height: 1.1;
+  margin-bottom: 2.4rem;
+  font-weight: 500;
 }
-.subheading{
-    display: inline-block;
-    text-transform: uppercase;
-    font-size: 1.6rem;
-    font-weight: 500;
-    color: #1f8686;;
-    margin-bottom: 1.6rem;
-    letter-spacing: 0.75px;
+.subheading {
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #1f8686;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
 }
-.btn{
-    display: inline-block;
-    text-decoration: none;
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 1.6rem 3.2rem;
-    border-radius: 3rem;
-    transition: all 0.3s;
+.btn {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.6rem 3.2rem;
+  border-radius: 3rem;
+  transition: all 0.3s;
 }
-.btn--full{
-    background-color: #1f8686;
-    color: #fff;
+.btn--full {
+  background-color: #1f8686;
+  color: #fff;
 }
 .btn--full:hover,
-.btn--full:active{
-    background-color: #165e5e;
+.btn--full:active {
+  background-color: #165e5e;
 }
-.btn--outline{
-    background-color: #fff;
-    color: #555;
+.btn--outline {
+  background-color: #fff;
+  color: #555;
 }
 .btn--outline,
 .btn--outline:hover,
-.btn--outline:active{
-    background-color: #e9f3f3;
-    box-shadow: inset 0 0 0 3px #fff;
+.btn--outline:active {
+  background-color: #e9f3f3;
+  box-shadow: inset 0 0 0 3px #fff;
 }
-.list{
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    gap: 1.6rem;
-    margin-bottom: 4.8rem;
+.list {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  margin-bottom: 4.8rem;
 }
-.list-icon{
-    width: 3rem;
-    height: 3rem;
-    color: #042e35;
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #042e35;
 }
-.list-item{
-    font-size: 1.8rem;
-    display: flex;
-    align-items: center;
-    gap: 1.6rem;
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
 }
 
 /* HELPER  CLASSES */
-.margin-right-sm{
-    margin-right: 1.6rem!important;
+.margin-right-sm {
+  margin-right: 1.6rem !important;
 }
-.margin-bottom-md{
-    margin-bottom: 4.8rem!important;
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
 }
-strong{
-    font-weight: 500;
+strong {
+  font-weight: 500;
 }
-.center-text{
-    text-align: center;
+.center-text {
+  text-align: center;
 }
-.white-heading{
-    color: #fff!important;
-    font-weight: 400;
+.white-heading {
+  color: #fff !important;
+  font-weight: 400;
 }
-.margin-right-md{
-    margin-right: 9.6rem;
+.margin-right-md {
+  margin-right: 9.6rem;
 }
