--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,14 @@ Paragraph default: 1.6
 /* ********************* */
 /* HEADER */
 /* ********************* */
+.main-page{
+    max-width: 135rem;
+    margin: 0 auto;
+}
 .header{
+    max-width: 135rem;
+    margin: 0 auto;
+    /*  */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -65,6 +72,8 @@ Paragraph default: 1.6
     padding: 0 4.8rem;
     background-color: transparent;
     transition: background-color 0.3s ease;
+    /*  */
+    position: relative;
 }
 .logo{
     height: 4.8rem;
@@ -104,6 +113,21 @@ Paragraph default: 1.6
 .main-nav-link.nav-cta:hover,
 .nav-cta:active{
     background-color: #165e5e;
+}
+/* MOBILE */
+.btn-mobile-nav{
+    border: none;
+    background: none;
+    cursor: pointer;
+    display: none;
+}
+.icon-mobile-nav{
+    height: 4.8rem;
+    width: 4.8rem;
+    color: #333;
+}
+.icon-mobile-nav[name="close-outline"]{
+    display: none;
 }
 /* ********************* */
 /* HERO SECTION */
