--- a/css/queries.css
+++ b/css/queries.css
@@ -101,8 +101,6 @@ FONT SIZE SYSTEM (px)
         margin-top: 3.2rem;
     }
     .services-items{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
         gap: 1.5rem;
     }
     .step-number{
@@ -110,6 +108,11 @@ FONT SIZE SYSTEM (px)
     }
     .candle-content{
         padding: 1.6rem;
+    }
+    .footer-name {
+        margin-right: 0!important;
+        width: 100%;
+        grid-column: 1/3;
     }
 }
   /* bellow 750px */
@@ -196,16 +199,36 @@ FONT SIZE SYSTEM (px)
     display: grid;
     grid-template-columns: repeat(2, 10rem);
     grid-template-rows: 1fr 1fr;
-    column-gap: 2rem;
+    column-gap: 5rem;
     row-gap: 3rem;
     margin-bottom: 2.4rem;
 }
-
 .footer-name {
     margin-right: 0!important;
     width: 100%;
+    grid-column: 1/5;
 }
 }
+  /* bellow 500px */
+  @media (max-width: 31.25em) {
+    .gallery-img{
+        width: 100%;
+    }
+    .grid-gallery{
+        gap: 1.5rem;
+        display: grid;
+        grid-template-areas: 
+        "photoOne photoTwo"
+        "photoOne photoFour"
+        "photoThree photoFive";
+        grid-template-columns: 1fr 1fr;
+        grid-row: 1fr;
+    }
+    .grid-gallery > img:first-child{
+        grid-area: photoOne;
+        height: 100%;
+    }
+  }
 /*
 SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
