--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ hr{
 }
 .services-items{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr)!important;
     gap: 3.2rem;
 }
 .services-item{
