--- a/css/queries.css
+++ b/css/queries.css
@@ -69,8 +69,17 @@ FONT SIZE SYSTEM (px)
         margin-bottom: 2.4rem;
         font-weight: 600;
     }
+    .testimonial-container {
+       
+        padding: 0;
+    }
     input{
         width: 60%;
+    }
+    .footer-name {
+        margin-right: 0!important;
+        width: 100%;
+        grid-column: 1/3;
     }
   }
   /* bellow 900px */
@@ -116,7 +125,7 @@ FONT SIZE SYSTEM (px)
     }
 }
   /* bellow 750px */
-  @media (max-width: 46.87em) {
+@media (max-width: 46.87em) {
 .btn-mobile-nav{
     display: block;
 }
@@ -159,7 +168,7 @@ FONT SIZE SYSTEM (px)
 .main-nav-link:visited{
     text-decoration: none;
     color: #333;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 3rem;
     transition: all 0.3s;
     display: inline-block;
@@ -169,22 +178,82 @@ FONT SIZE SYSTEM (px)
     background-color: #333;
     color: #fff!important;
 }
+.grid--2-cols {
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 3rem;
+}
 .grid--3-cols {
     grid-template-columns: repeat(2, 1fr);
-  }
-  .grid--4-cols {
+}
+.grid--4-cols {
     grid-template-columns: repeat(2, 1fr);
-  }
-  .services-items{
+}
+.container{
+    max-width: 100rem;
+    margin: 0 auto;
+    padding: 0 4.8rem;
+}
+.hero{
+    max-width: 100rem;
+    margin: 0 auto;
+    padding: 0 4.8rem;
+}
+.hero-img {
+    margin-bottom: 0rem;
+    width: 90%;
+    margin: 0 auto !important;
+}
+.services-items{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 1.5rem;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 1.5rem;
+    row-gap: 0.2rem;
+}
+.services-item{
+    padding: 0.5rem;
+    line-height: 1.4;
+    margin-bottom: 0.5rem;
 }
 .operations__tab-container{
     flex-wrap: wrap;
 }
+.step-img-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .step-img{
-    margin-top: 15rem;
+    margin-top: 0rem;
+    text-align: center!important;
+    width: 90%;
+    height: 300px;
+    margin: 0 auto!important;
+    justify-self: center!important;
+}
+.gallery-img{
+    width: 100%;
+}
+.grid-gallery{
+    gap: 0.5rem;
+    display: grid;
+    grid-template-areas: 
+    "photoOne photoTwo"
+    "photoOne photoFour"
+    "photoThree photoFive";
+    grid-template-columns: 1fr 1fr;
+    grid-row: 0.5fr 0.5fr;
+}
+.grid-gallery > img:first-child{
+    grid-area: photoOne;
+    height: 100%;
+}
+.grid-item-center {
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+    grid-column: 1/-1;
+    width: 50%;
 }
 .testimonials.container{
     width: 60rem;
@@ -195,13 +264,27 @@ FONT SIZE SYSTEM (px)
     margin-bottom: 4.8rem;
     font-weight: 600;
 }
+.testimonials.container{
+    max-width: 100rem;
+    margin: 0 auto;
+    padding: 0rem;
+}
+.testimonial-container{
+    padding: 6.4rem 0rem;
+}
+
 .quick-links{
     display: grid;
-    grid-template-columns: repeat(2, 10rem);
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(3, 10rem);
+    grid-template-rows: 1fr 1fr 1fr;
     column-gap: 5rem;
     row-gap: 3rem;
     margin-bottom: 2.4rem;
+}
+.links-box{
+    align-self: center;
+    justify-self: center;
+    text-align: center;
 }
 .footer-name {
     margin-right: 0!important;
@@ -209,26 +292,155 @@ FONT SIZE SYSTEM (px)
     grid-column: 1/5;
 }
 }
-  /* bellow 500px */
-  @media (max-width: 31.25em) {
-    .gallery-img{
+/* bellow 550px */
+@media (max-width: 37.5em) {
+    .container {
+        max-width: 80rem;
+        margin: 0 auto;
+        padding: 0 4.8rem;
+    }
+    .section-hero,
+    .section-about,
+    .section-services,
+    .section-how,
+    .section-gallery,
+    .section-candles,
+    .section-testimonials,
+    .section-cta,
+    .section-footer{
+        padding: 4.8rem 0;
+    }
+    .hero{
+        max-width: 80rem;
+        margin: 0 auto;
+        padding: 0 4.8rem;
+    }
+    .hero-img {
+        margin-bottom: 0rem;
+        width: 100%;
+        margin: 0 auto !important;
+    }
+    .text-about {
+        font-size: 16px;
+        line-height: 1.7;
+    }
+    .step-img-box img {
         width: 100%;
     }
-    .grid-gallery{
-        gap: 1.5rem;
+    .grid--2-cols {
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 3rem;
+    }
+    .grid--3-cols {
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 3rem;
+    }
+    .grid--4-cols {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .grid-item-center {
+        grid-column: 1/-1;
+        width: 100%;
+    }
+    .services-items{
         display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 1fr 1fr 1fr;
+        column-gap: 1.5rem;
+        row-gap: 0.2rem;
+    }
+    .services-item{
+        padding: 1rem 5rem;
+    }
+    .services-item.grid-item-center {
+        justify-self: center;
+        align-self: center;
+        text-align: center;
+        grid-column: 1/-1; 
+        width: 100%;
+    }
+    .step-description{
+        font-size: 16px;
+        line-height: 1.8;
+    }
+    .step-img{
+        margin-top: 0;
+    }
+    .grid-gallery{
+        gap: 0.5rem;
+        display: grid;
+        grid-template-columns: 1fr;
         grid-template-areas: 
-        "photoOne photoTwo"
-        "photoOne photoFour"
-        "photoThree photoFive";
-        grid-template-columns: 1fr 1fr;
-        grid-row: 1fr;
+        "photoOne" 
+        "photoTwo"
+        "photoThree"
+        "photoFour"
+        "photoFive";
+        grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr  0.5fr;
     }
-    .grid-gallery > img:first-child{
-        grid-area: photoOne;
-        height: 100%;
+    .candle-content{
+        padding: 2.5rem 5rem;
+    }  
+    .section-testimonials{
+        padding: 9.6rem 0 6.4rem 0;
     }
-  }
+    .testimonials.container{
+        max-width: 80rem;
+        margin: 0 auto;
+        padding: 0rem 4.8rem;
+    }
+    .links-box{
+        align-self: center;
+        justify-self: center;
+        text-align: center;
+    }
+    .footer-name {
+        margin-right: 0!important;
+        width: 15rem;
+        grid-column: 1/5;
+    }
+}
+/* bellow 400px */
+@media (max-width: 25em) {
+    .container {
+        padding:0 2.4rem;
+    }
+    .hero{
+        padding: 0 2.4rem;
+    }
+    .section-how.container.tabbed-component{
+        padding: 0;
+    }
+    .tabbed-component{
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+    .operations__tab-container{
+        margin-bottom: 0;
+    }
+    .btn.operations__tab {
+        padding: 1rem 2rem;
+        background-color: #1f8686;
+        color: #e9f3f3;
+        border-radius: 3rem;
+        font-size: 1.6rem;
+        line-height: 1.6;
+        border: none;
+        cursor: pointer;
+    }
+    .testimonials.container{
+        max-width: 50rem;
+        margin: 0 auto;
+        padding: 0rem 3.2rem;
+    }
+    .footer-icon {
+        width: 25rem;
+        display: flex;
+        justify-content: end;
+        grid-column: 5 / -1;
+    }
+}
 /*
 SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
