--- a/css/style.css
+++ b/css/style.css
@@ -127,12 +127,14 @@ Paragraph default: 1.6
     height: 4.8rem; 
     width: 4.8rem;
     z-index: 9999; 
+    border: none!important;
 }
 .icon-mobile-nav{
     height: 4.8rem;
     width: 4.8rem;
     color: #333;
     z-index: 9999;
+    border: none;
 }
 .icon-mobile-nav[name="close-outline"]{
     display: none;
